--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.14.0",
+    "gatsby-plugin-mdx": "^3.14.0",
+    "gatsby-plugin-sharp": "^4.14.1",
+    "gatsby-remark-images": "^6.14.0",
     "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-sharp": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
