--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.14.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-sharp": "^4.14.1",
     "gatsby-remark-images": "^6.14.0",
